Fixed single event column spacing on medium +

--- a/wp-content/themes/cls/src/assets/scss/site/primary/pages/_events.scss
+++ b/wp-content/themes/cls/src/assets/scss/site/primary/pages/_events.scss
@@ -189,7 +189,7 @@
 
                 .entry-body {
                     margin-top: 0;
-                    @include xy-cell(6 of 12, $gutters: 40, $gutter-type: padding, $gutter-position: left);
+                    @include xy-cell(6 of 12, $gutters: 0);
                     @include xy-cell-offset(1, $gutters: 0);
                 }
             }
